--- a/voice_recognition/example_mfcc.ipynb
+++ b/voice_recognition/example_mfcc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,10 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting python_speech_features\n",
-      "  Using cached python_speech_features-0.6-py3-none-any.whl\n",
-      "Installing collected packages: python-speech-features\n",
-      "Successfully installed python-speech-features-0.6\n"
+      "Requirement already satisfied: python_speech_features in c:\\users\\melvy\\miniconda3\\envs\\lab3\\lib\\site-packages (0.6)\n"
      ]
     }
    ],
@@ -97,12 +94,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 19.6562001    4.80088333  -0.39923928 -13.12717859 -11.20485706\n",
+      "  -13.17570354  16.44359119  17.69981651 -18.8004633  -23.92164213\n",
+      "   -6.69193716  -4.65087529  -9.37330377]\n",
+      " [ 20.18694892   4.04874199  -2.05238928 -14.71222205 -14.10432126\n",
+      "  -16.88151098  10.18677327  13.87796754 -14.86476376 -18.95722156\n",
+      "  -12.52195357 -12.18092551  -7.93818231]\n",
+      " [ 20.5830988    3.84625794  -2.29023938 -15.54384683 -15.66642232\n",
+      "  -17.53117396  11.40727383  15.82326881 -16.17279141 -12.48807264\n",
+      "  -10.16564847  -7.12117417  -6.02721805]\n",
+      " [ 20.83689831   2.53099247  -0.9543265  -15.88667803 -17.56826398\n",
+      "  -15.5157471    8.35315414  18.22145279 -18.9572102  -15.0145891\n",
+      "   -9.49192717 -11.57551318  -5.81955303]\n",
+      " [ 20.85454797   2.67048111   0.84060852 -14.37241537 -17.55295613\n",
+      "  -12.6883113   14.00950294  24.22267766 -11.52837906 -14.96092873\n",
+      "   -7.55520645  -7.07930131   2.8710485 ]\n",
+      " [ 20.87537651   4.28038299   0.43251079 -12.54802729 -20.35685117\n",
+      "  -13.10552911  13.46766168  21.56846369 -11.63285617 -16.21442335\n",
+      "   -3.02127603  -8.51201658   1.2753983 ]\n",
+      " [ 21.0901704    5.02993462  -1.6447173  -16.34685856 -24.71508075\n",
+      "  -17.1125565   15.98695544  14.70852018 -15.54527857 -20.06784609\n",
+      "   -3.59058007 -11.20082039  -4.96463787]\n",
+      " [ 21.31966695   6.12742149  -0.81188605 -15.10793628 -22.19162686\n",
+      "  -16.76827501  19.76147047  19.67081999 -11.78217587 -14.59487645\n",
+      "   -6.74642919  -6.37187013   3.33961337]\n",
+      " [ 21.3909547    5.30352067  -0.60205394 -16.82881319 -24.43384564\n",
+      "  -15.6960016   18.21487594  15.03298554  -9.38197632 -13.36300821\n",
+      "  -12.78980805  -7.03358333   4.35113269]\n",
+      " [ 21.35612002   5.03507712  -1.64218604 -18.19603711 -25.39936263\n",
+      "  -19.07560798  14.39400607   9.30357716  -7.68296445 -16.36961594\n",
+      "  -15.04874749  -9.23772917   3.18972477]\n",
+      " [ 21.30843876   6.04809595  -0.61744717 -19.72180497 -23.63479391\n",
+      "  -20.25071137  14.25615028   9.83790374  -6.36988929 -15.57910535\n",
+      "  -13.51291457  -7.77573776   1.7225532 ]\n",
+      " [ 21.29190397   6.89956368  -0.84124378 -20.27706801 -20.6539471\n",
+      "  -23.13915404  16.68004757  10.85872936  -8.17291581 -12.94137805\n",
+      "  -14.14428137  -6.7276012    0.056558  ]\n",
+      " [ 21.25828703   5.82737153  -2.23653424 -18.11664418 -20.913203\n",
+      "  -25.42965986  11.4598036   13.81834536  -6.01438131 -20.17178502\n",
+      "  -14.85722224  -3.18947151  -6.18011014]\n",
+      " [ 21.27616002   4.25587946  -2.89563297 -17.5198148  -19.73986807\n",
+      "  -25.13279574  11.8677676    9.90609824  -5.67171903 -20.53216795\n",
+      "  -10.38733523  -3.93746948  -6.17774591]\n",
+      " [ 21.17587305   4.55497135  -2.71766541 -15.24866473 -15.72925129\n",
+      "  -22.85575     12.07686559   5.89201615  -3.80762014 -16.62600732\n",
+      "   -9.61767502  -5.97881186  -6.24438524]\n",
+      " [ 20.92356376   4.66347353  -1.44492692 -12.72763755 -14.22174637\n",
+      "  -19.65355622  16.45419281   7.23881792   0.11754442 -10.15834674\n",
+      "   -7.87887893   0.29936745  -4.55482262]\n",
+      " [ 20.79071586   4.57859351  -1.34558769 -16.65442729  -8.2934066\n",
+      "  -24.57638707  11.09451308  -0.3253504    1.85994839  -8.28593843\n",
+      "  -10.60437484  -3.17332336  -9.94187822]\n",
+      " [ 20.7073355    2.52370277   0.84097663 -15.64277279  -9.89272312\n",
+      "  -28.34831933   8.13847951  -1.56073482   0.61282955  -9.24546233\n",
+      "  -11.94487458  -3.25630086 -12.98050048]\n",
+      " [ 20.62651161   3.87684504   5.23874016 -12.96789636  -4.79426508\n",
+      "  -27.39271645   9.4411624    2.86466612   2.82863401  -3.0443694\n",
+      "   -5.89311737   2.550838   -12.40738896]\n",
+      " [ 20.3888626    4.44471493   4.16271489 -13.89712917  -1.76039369\n",
+      "  -32.48067003  -0.60553258   1.90793122   1.47956091  -7.9701504\n",
+      "  -10.42281163   2.86888952 -17.99702435]\n",
+      " [ 20.21588129   3.80086215   5.31218316 -11.61900803   0.45326111\n",
+      "  -35.88373785  -3.5872603   -7.89500978  -4.81637008  -0.51610817\n",
+      "   -9.24241692  -3.86861444 -17.41560487]\n",
+      " [ 19.96319991   4.29174961   7.62714275  -9.39329132   1.27839376\n",
+      "  -37.14762351   0.87490406 -13.87269243 -13.06688572   0.08813558\n",
+      "   -4.66567813  -1.824563   -21.85858826]\n",
+      " [ 19.27802974   5.49108568   9.06971643  -8.80995927   7.58825534\n",
+      "  -41.31260349  -5.68630777  -8.2687024  -21.44564916   0.23862459\n",
+      "   -6.91995757  -0.63199485 -23.44518429]]\n"
+     ]
+    }
+   ],
    "source": [
     "ceps_1 = mfcc(X_1, samplerate=sample_rate_1, nfft=1024)\n",
-    "ceps_2 = mfcc(X_2, samplerate=sample_rate_2, nfft=1024)"
+    "ceps_2 = mfcc(X_2, samplerate=sample_rate_2, nfft=1024)\n",
+    "\n",
+    "print(ceps_1)"
    ]
   },
   {
@@ -231,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
