--- a/Exp_1_Men_Women_Natural.ipynb
+++ b/Exp_1_Men_Women_Natural.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "04ed2d4f",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "236cc996",
    "metadata": {},
    "outputs": [
@@ -43,6 +43,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Men 36\n",
+      "Women 36\n",
       "(72, 27)\n",
       "[[20.83553285 13.14986301 -9.66938018 ...  5.59652933  7.61292183\n",
       "  -1.        ]\n",
@@ -70,6 +72,8 @@
     "\n",
     "# Gathering data and building dataset\n",
     "dataset = []\n",
+    "nbMen = 0\n",
+    "nbWomen = 0\n",
     "\n",
     "for filename in matching_files:\n",
     "    sample_rate, X = wav.read(os.path.join(folder, filename))\n",
@@ -80,12 +84,20 @@
     "\n",
     "    # Row forming\n",
     "    row = np.append(ceps_avg, ceps_std)\n",
-    "    row = np.append(row, 1 if filename[2] == \"m\" else -1)\n",
+    "    \n",
+    "    if (filename[2] == \"m\"):\n",
+    "        row = np.append(row, 1)\n",
+    "        nbMen += 1\n",
+    "    else:\n",
+    "         row = np.append(row, -1)\n",
+    "         nbWomen += 1\n",
     "\n",
     "    # Add to dataset\n",
     "    dataset.append(row)\n",
     "\n",
     "dataset = np.array(dataset)\n",
+    "print(\"Men \" + str(nbMen))\n",
+    "print(\"Women \" + str(nbWomen))\n",
     "print(dataset.shape)\n",
     "print(dataset)\n",
     "\n"
