--- a/Exp_1_Men_Women_Natural.ipynb
+++ b/Exp_1_Men_Women_Natural.ipynb
@@ -46,19 +46,10 @@
       "Men 36\n",
       "Women 36\n",
       "(72, 14)\n",
-      "[[ 20.83553285  13.14986301  -9.66938018 ... -19.36086468 -16.14554454\n",
-      "   -1.        ]\n",
-      " [ 21.08101329   4.73696633  -9.2959752  ... -23.62248603 -11.13881792\n",
-      "   -1.        ]\n",
-      " [ 21.20387031  13.72238626  -8.3806115  ... -10.52878694  -3.11467664\n",
-      "   -1.        ]\n",
-      " ...\n",
-      " [ 20.60276675  -1.64480311  -4.62619758 ...  14.82115193 -12.53828257\n",
-      "    1.        ]\n",
-      " [ 20.92725158  -2.54670939   1.69034385 ...  11.9298563    6.67610567\n",
-      "    1.        ]\n",
-      " [ 20.39613844  -4.26241285  17.83703329 ...  -9.55015262  16.18050739\n",
-      "    1.        ]]\n"
+      "[-1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
+      " -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1. -1.\n",
+      "  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.\n",
+      "  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.  1.]\n"
      ]
     }
    ],
@@ -97,7 +88,7 @@
     "print(\"Men \" + str(nbMen))\n",
     "print(\"Women \" + str(nbWomen))\n",
     "print(dataset.shape)\n",
-    "print(dataset)\n",
+    "print(dataset[:,13])\n",
     "\n"
    ]
   },
@@ -411,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
